Added documentation endpoint
Changed email associated with commit
